--- a/main.html
+++ b/main.html
@@ -4,6 +4,20 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+        table {
+            width: 100%
+            border-collapse: collapse
+        }
+        th, td {
+            border: 1px solid 
+            padding: 8px;
+            text-align: left
+        }
+        th {
+            background-color: red;
+        }
+    </style>
 </head>
 
 <body>
@@ -22,7 +36,7 @@
 		</thead>
 		<tbody>
 
-			<tr id = "set2">
+			<tr>
 				<td>Waist</td>
 				<td>25</td>
 				<td>28</td>
@@ -30,7 +44,7 @@
 				<td>31</td>
 				<td>32</td>
 			</tr>
-			<tr id = set3>
+			<tr>
 				<td>Chest</td>
 				<td>34</td>
 				<td>34</td>
@@ -38,7 +52,7 @@
 				<td>40</td>
 				<td>41</td>
 			</tr>
-			<tr id = set4>
+			<tr>
 				<td>Sleeve</td>
 				<td>23</td>
 				<td>24</td>
