--- a/main.html
+++ b/main.html
@@ -4,38 +4,24 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<style>
-        table {
-            width: 100%
-            border-collapse: collapse
-        }
-        th, td {
-            border: 1px solid 
-            padding: 8px;
-            text-align: left
-        }
-        th {
-            background-color: red;
-        }
-    </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
 
-	<table border = 1 padding = "0" margin = "0" width = 100%>
+	<table border = 1>
 		<thead>
-			<tr id = "set1">
-				<td>Part</td>
-				<td>XS</td>
-				<td>S</td>
-				<td>M</td>
-				<td>L</td>
-				<td>XL</td>
+			<tr>
+			<th>Part</th>
+			<th>XS</th>
+			<th>S</th>
+			<th>M</th>
+			<th>L</th>
+			<th>XL</th>
 			</tr>
 		</thead>
-		<tbody>
 
+		<tbody>
 			<tr>
 				<td>Waist</td>
 				<td>25</td>
@@ -61,6 +47,7 @@
 				<td>25</td>
 			</tr>
 		</tbody>
+
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
